auto-param: always show initial guess in results